--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
    <header>
-        <img class="logo" id="logo" src="img/logo.png" alt="logo">
+        <img class="logo" id="logo" src="img/logo (2).png"logo">
 
         <nav>
             <ul class="links">
@@ -26,24 +26,30 @@
 <div id="border"></div>
 <!--img----------------------------------------------->
 <div class="carro">
-    <img src="img/carro.jpeg" alt="carro">  
+    <img src="img/banner.jpg" alt="carro">  
 </div>
 <!--img----------------------------------------------->
 
-<!---------------------------------------------------->
+<!---------------------------------------------------->dd
     <main>
-      <h1 id="titulo">Carros mais buscados</h1>
+      <u><h1 id="titulo">Carros mais buscados</h1></u>
       <div class="container">
         <div class="item">
-          <h1>Carro Poggers</h1>
-          <img class="img" src="img/img.png">
+          <div id="title-style"> 
+          <h1>Puma GTS</h1>
+          </div>
+          <img class="img" src="img/Puma GTS.jpg">
         </div>
         <div class="item">
-          <h1>Carro Poggers</h1>
+          <div id="title-style"> 
+          <h1>Ford Maverick GT77</h1>
+          </div>
           <img class="img"  src="img/img.png">
         </div>
         <div class="item">
-          <h1>Carro Poggers</h1>
+          <div id="title-style"> 
+          <h1>Mercedes-benz 280</h1>
+          </div>
           <img class="img" src="img/img.png">
         </div>
       </div>
@@ -52,7 +58,7 @@
     <footer>
 
       <div id="teste">
-        <img class="logo" src="img/logo.png" alt="logo">
+        <img class="logo" src="img/logo (2).png" alt="logo" style="padding-top: 20px;">
       </div>
       <div class="A"        >
       <div class="footer">
@@ -63,7 +69,7 @@
         <h1>Telefone</h1>
         <p>(41) 3321-0200</p>
       </div>
-      <div id="developed"><u>Desemvolvido por V,M,T</u></div>
+      <div id="developed">Desenvolvido por <a href="https://github.com/viniciusabpr?tab=repositories">Vinicius de abreu Pereira </a>,<a href="">Tiago Salles </a>,<a href=""> Marcel Rodrigues</a>
 
     </footer>
 </body>
