--- a/Compra.html
+++ b/Compra.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" id="logo" src="img/logo.png" alt="logo">
+        <img class="logo" id="logo2" src="./img/logo (2).png" alt="logo" >
         <nav>
             <ul class="links">
                 <li><a href="index.html">Home</a></li>
@@ -27,6 +27,7 @@
     </div>
 
     <div class="container">
+    
         <div class="sidebar">
             <h2 style="text-align: center;">Filtros</h2>
             <form id="car-filters">
