--- a/index.html
+++ b/index.html
@@ -1,76 +1,70 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trabalho final</title>
-    <link rel="stylesheet" href="Css/style.css"/>
-    <script src="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Trabalho final</title>
+  <link rel="stylesheet" href="Css/style.css" />
+  <script src="script.js"></script>
 </head>
-
 <body>
-   <header>
-        <img class="logo" id="logo" src="img/logo (2).png"logo">
-
-        <nav>
-            <ul class="links">
-             <li><a href="index.html">Home</a></li>
-             <li><a href="Compra.html">Compra</a></li>
-             <li><a href="Ajuda.html">Ajuda</a></li> 
-            </ul>
-        </nav>
-      <div class="B">
-      <a class="login" href="Login.html"><button>login</button></a>
-      </div>
-</header>
-<div id="border"></div>
-<!--img----------------------------------------------->
-<div class="carro">
-    <img src="img/banner.jpg" alt="carro">  
-</div>
-<!--img----------------------------------------------->
-
-<!---------------------------------------------------->dd
-    <main>
-      <u><h1 id="titulo">Carros mais buscados</h1></u>
-      <div class="container">
-        <div class="item">
-          <div id="title-style"> 
+  <header>
+    <img class="logo" id="logo" src="img/logo (2).png" logo">
+    <nav>
+      <ul class="links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Compra.html">Compra</a></li>
+        <li><a href="Ajuda.html">Sobre Nós</a></li>
+      </ul>
+    </nav>
+    <a href="Login.html"><button>login</button></a>
+  </header>
+  <div id="border"></div>
+  <!--img----------------------------------------------->
+  <div class="carro">
+    <img src="img/banner.jpg" alt="carro">
+  </div>
+  <!--img----------------------------------------------->
+  <main>
+    <u>
+      <h1 id="titulo">Carros mais buscados</h1>
+    </u>
+    <div class="container">
+      <div class="item">
+        <div id="title-style">
           <h1>Puma GTS</h1>
-          </div>
-          <img class="img" src="img/Puma GTS.jpg">
         </div>
-        <div class="item">
-          <div id="title-style"> 
+        <img class="img" src="img/Puma GTS.jpg">
+      </div>
+      <div class="item">
+        <div id="title-style">
           <h1>Ford Maverick GT77</h1>
-          </div>
-          <img class="img"  src="img/img.png">
         </div>
-        <div class="item">
-          <div id="title-style"> 
+        <img class="img" src="img/img.png">
+      </div>
+      <div class="item">
+        <div id="title-style">
           <h1>Mercedes-benz 280</h1>
-          </div>
-          <img class="img" src="img/img.png">
         </div>
+        <img class="img" src="img/img.png">
       </div>
-    </main>
-<!--------------------------------------------------->
-    <footer>
-
-      <div id="teste">
-        <img class="logo" src="img/logo (2).png" alt="logo" style="padding-top: 20px;">
-      </div>
-      <div class="A"        >
-      <div class="footer">
-        <h1>Endereço</h1>
-        <p>Rua asflasfasf</P>
-      </div>
-      <div class="footer">
-        <h1>Telefone</h1>
-        <p>(41) 3321-0200</p>
-      </div>
-      <div id="developed">Desenvolvido por <a href="https://github.com/viniciusabpr?tab=repositories">Vinicius de abreu Pereira </a>,<a href="">Tiago Salles </a>,<a href=""> Marcel Rodrigues</a>
-
-    </footer>
+    </div>
+  </main>
+  <!--------------------------------------------------->
+  <footer>
+    <div id="teste">
+      <img class="logo" src="img/logo (2).png" alt="logo" style="padding-top: 20px;">
+    </div>
+    <div class="footer">
+      <h1>Endereço</h1>
+      <p>Rua asflasfasf</P>
+    </div>
+    <div class="footer">
+      <h1>Telefone</h1>
+      <p>(41) 3321-0200</p>
+    </div>
+  </footer>
 </body>
+
 </html>
