--- a/Compra.html
+++ b/Compra.html
@@ -1,127 +1,159 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabalho final</title>
     <link rel="stylesheet" href="./Css/Compra.css">
 </head>
 
 <body>
+
     <header>
+        <!-- Cabeçalho da página -->
         <img class="logo" id="logo2" src="./img/logo (2).png" alt="logo">
         <nav>
+            <!-- Menu de navegação -->
             <ul class="links">
+                <!-- Lista de links -->
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Compra.html">Compra</a></li>
-                <li><a href="Ajuda.html">Sobre Nós</a></li>
+                <li><a href="Sobre-Nós.html">Sobre Nós</a></li>
             </ul>
         </nav>
         <div class="B">
+            <!-- Botão de login -->
             <a href="Login.html"><button class="button">Entrar</button></a>
+       
         </div>
     </header>
 
     <div class="teste">
+        <!-- Divisão para a barra de pesquisa -->
         <input class="pesquisa" type="text" placeholder="Pesquisar">
-        <button class="pesquisa-btn " ">🔍</button>
+        <!-- Campo de entrada para pesquisa -->
+        <button class="pesquisa-btn">🔍</button>
+        <!-- Botão de pesquisa -->
     </div>
 
-    <div class=" container">
-
-            <div class="sidebar">
-                <h2 style="text-align: center;">Filtros</h2>
-                <form id="car-filters">
-                    <div class="filter">
-                        <label for="marca">Marca:</label>
-                        <select id="marca" name="marca">
-                            <option value="">Selecione</option>
-                            <option value="ford">Ford</option>
-                            <option value="chevrolet">Chevrolet</option>
-                            <option value="toyota">Toyota</option>
-                        </select>
-                    </div>
-
-                    <div class="filter">
-                        <label for="modelo">Modelo:</label>
-                        <input type="text" id="modelo" name="modelo" placeholder="Digite o modelo">
-                    </div>
-
-                    <div class="filter">
-                        <label for="ano">Ano:</label>
-                        <input type="number" id="ano" name="ano" placeholder="Digite o ano">
-                    </div>
-
-                    <div class="filter">
-                        <label for="versao">Versão:</label>
-                        <input type="text" id="versao" name="versao" placeholder="Digite a versão">
-                    </div>
-
-                    <div class="filter">
-                        <label for="blindado">Blindado:</label>
-                        <select id="blindado" name="blindado">
-                            <option value="">Selecione</option>
-                            <option value="sim">Sim</option>
-                            <option value="nao">Não</option>
-                        </select>
-                    </div>
-
-                    <div class="filter">
-                        <label for="quilometragem">Quilometragem:</label>
-                        <input type="number" id="quilometragem" name="quilometragem"
-                            placeholder="Digite a quilometragem">
-                    </div>
-
-                    <div class="filter">
-                        <label for="preco">Preço:</label>
-                        <input type="number" id="preco" name="preco" placeholder="Digite o preço">
-                    </div>
-
-                    <div class="filter">
-                        <button type="submit">Aplicar Filtros</button>
-                    </div>
-                </form>
-            </div>
-
-            <div class="itens">
-                <div class="card">
-                    <img src="./img/img.png" alt="">
-                    <h1 id="title">Nome do carro</h1>
-                    <div class="buy-button">
-                        <span>Valor do carro</span>
-                        <button>Comprar</button>
-                    </div>
+    <div class="container">
+        <!-- Container principal -->
+        <div class="sidebar">
+            <!-- Barra lateral de filtros -->
+            <h2 style="text-align: center;">Filtros</h2>
+            <form id="car-filters">
+                <!-- Formulário de filtros de carro -->
+                <div class="filter">
+                    <!-- Filtro por marca -->
+                    <label for="marca">Marca:</label>
+                    <select id="marca" name="marca">
+                        <!-- Dropdown de seleção de marca -->
+                        <option value="">Selecione</option>
+                        <option value="ford">Ford</option>
+                        <option value="chevrolet">Chevrolet</option>
+                        <option value="toyota">Toyota</option>
+                    </select>
                 </div>
 
-                <div class="card">
-                    <img src="./img/img.png" alt="">
-                    <h1 id="title">Nome do carro</h1>
-                    <div class="buy-button">
-                        <span>Valor do carro</span>
-                        <button>Comprar</button>
-                    </div>
+                <div class="filter">
+                    <!-- Filtro por modelo -->
+                    <label for="modelo">Modelo:</label>
+                    <input type="text" id="modelo" name="modelo" placeholder="Digite o modelo">
+                    <!-- Campo de texto para inserção do modelo -->
                 </div>
 
-                <div class="card">
-                    <img src="./img/img.png" alt="">
-                    <h1 id="title">Nome do carro</h1>
-                    <div class="buy-button">
-                        <span>Valor do carro</span>
-                        <button>Comprar</button>
-                    </div>
+                <div class="filter">
+                    <!-- Filtro por ano -->
+                    <label for="ano">Ano:</label>
+                    <input type="number" id="ano" name="ano" placeholder="Digite o ano">
+                    <!-- Campo de texto para inserção do ano -->
                 </div>
 
-                <div class="card">
-                    <img src="./img/img.png" alt="">
-                    <h1 id="title">Nome do carro</h1>
-                    <div class="buy-button">
-                        <span>Valor do carro</span>
-                        <button>Comprar</button>
-                    </div>
+                <div class="filter">
+                    <!-- Filtro por versão -->
+                    <label for="versao">Versão:</label>
+                    <input type="text" id="versao" name="versao" placeholder="Digite a versão">
+                    <!-- Campo de texto para inserção da versão -->
+                </div>
+
+                <div class="filter">
+                    <!-- Filtro por carro blindado -->
+                    <label for="blindado">Blindado:</label>
+                    <select id="blindado" name="blindado">
+                        <!-- Dropdown de seleção de carro blindado -->
+                        <option value="">Selecione</option>
+                        <option value="sim">Sim</option>
+                        <option value="nao">Não</option>
+                    </select>
+                </div>
+
+                <div class="filter">
+                    <!-- Filtro por quilometragem -->
+                    <label for="quilometragem">Quilometragem:</label>
+                    <input type="number" id="quilometragem" name="quilometragem" placeholder="Digite a quilometragem">
+                    <!-- Campo de texto para inserção da quilometragem -->
+                </div>
+
+                <div class="filter">
+                    <!-- Filtro por preço -->
+                    <label for="preco">Preço:</label>
+                    <input type="number" id="preco" name="preco" placeholder="Digite o preço">
+                    <!-- Campo de texto para inserção do preço -->
+                </div>
+
+                <div class="filter">
+                    <!-- Botão para aplicar os filtros -->
+                    <button type="submit">Aplicar Filtros</button>
+                </div>
+            </form>
+        </div>
+
+        <div class="itens">
+            <!-- Divisão dos itens de carro disponíveis -->
+
+            <div class="card">
+                <!-- Card de carro -->
+                <img src="./img/img.png" alt="">
+                <h1 id="title">Nome do carro</h1>
+                <div class="buy-button">
+                    <span>Valor do carro</span>
+                    <button>Comprar</button>
                 </div>
             </div>
+
+            <div class="card">
+                <!-- Card de carro -->
+                <img src="./img/img.png" alt="">
+                <h1 id="title">Nome do carro</h1>             
+                <div class="buy-button">                
+                    <span>Valor do carro</span>                   
+                    <button>Comprar</button>            
+                </div>
+            </div>
+
+            <div class="card">
+                <!-- Card de carro -->
+                <img src="./img/img.png" alt="">
+                <h1 id="title">Nome do carro</h1>
+                <div class="buy-button">
+                    <span>Valor do carro</span>
+                    <button>Comprar</button>
+                </div>
+            </div>
+
+            <div class="card">
+                <!-- Card de carro -->
+                <img src="./img/img.png" alt="">
+                <h1 id="title">Nome do carro</h1>
+                <div class="buy-button">
+                    <span>Valor do carro</span>
+                    <button>Comprar</button>
+                </div>
+            </div>
+        </div>
     </div>
+
 </body>
 
 </html>
