--- a/Login.html
+++ b/Login.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trabalho final</title>
     <link rel="stylesheet" href="Css/Criarconta.css">
 </head>
 
 <body>
     <div class="form-container-logar">
-        <div class="exit"><a href="index.html"><svg id="xcircle" xmlns="http://www.w3.org/2000/svg" width="30"
-                    height="30" fill="currentColor" class="bi bi-x-circle-fill" viewBox="0 0 16 16">
+        <!-- Container principal do formulário de login -->
+        <div class="exit">
+            <!-- Botão de saída-->
+            <a href="index.html">
+                <!-- Link para a página inicial -->
+                <svg id="xcircle" xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                    class="bi bi-x-circle-fill" viewBox="0 0 16 16">
                     <path
                         d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M5.354 4.646a.5.5 0 1 0-.708.708L7.293 8l-2.647 2.646a.5.5 0 0 0 .708.708L8 8.707l2.646 2.647a.5.5 0 0 0 .708-.708L8.707 8l2.647-2.646a.5.5 0 0 0-.708-.708L8 7.293z" />
-                </svg></a></div>
+                </svg>
+            </a>
+        </div>
+        
         <form id="form">
+            <!-- Formulário de login -->
             <h1>Login</h1>
-            <input clas="login-input" type="Email" placeholder="Email">
-            <input clas="login-input" type="password" placeholder="Senha">
+            <input class="login-input" type="Email" placeholder="Email">
+            <input class="login-input" type="password" placeholder="Senha">
             <a href="#" class="password">Esqueci minha senha</a>
+            <!-- Link para recuperar senha -->
         </form>
+        
         <div class="horizontalbar">
             <button id="enter">Entrar</button>
+            <!-- Botão para submeter o formulário -->
             <a href="CriarConta.html">Criar Conta</a>
+            <!-- Link para a página de criação de conta -->
         </div>
     </div>
 </body>
+
 </html>
